# dragonheart

./: .gitignore  AGENTS.md  Dragon_Heart_Concept_Plan.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
memory/: MEMORY.md  dragonheart-design-language.md  dragonheart-stack.md
scripts/: gen-icon.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: files.rs  lib.rs  main.rs  ollama.rs
src/adapters/: tauriDb.ts  tauriFiles.ts  tauriOllama.ts
src/engine/: characterCard.ts  context.ts  index.ts  lorebook.ts  memory.ts  ollama.ts  orchestrator.ts  personaProbe.ts  ports.ts  roomJudge.ts  seed.ts  soul.ts  tokens.ts  types.ts  util.ts  vector.ts
src/engine/__tests__/: card.test.ts  context.test.ts  core.test.ts  fixtures.ts  groupContext.test.ts  groupMemory.test.ts  live.test.ts  lorebook.test.ts  memory.test.ts  nodeDb.ts  orchestrator.test.ts  room.test.ts  roomDb.test.ts  roomJudge.test.ts  roomLive.test.ts  seed.test.ts
src/engine/db/: repositories.ts  schema.ts
src/state/: roomSession.ts  store.ts
src/state/__tests__/: roomSession.test.ts
src/styles/: app.css  styles.css
src/styles/tokens/: colors.css  effects.css  fonts.css  motion.css  spacing.css  theme-light.css  typography.css
src/ui/components/: LoadingVeil.tsx
src/ui/ds/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  Dialog.tsx  IconButton.tsx  (+14 more)
(+15 files in other folders)
