[package]
name = "dragon-heart"
version = "0.2.0"
description = "A warm, local space for being with AI characters who remember you."
authors = ["Josh Abbott"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "dragon_heart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls"] }
log = "0.4"

[features]
# DO NOT REMOVE — used for production builds.
custom-protocol = ["tauri/custom-protocol"]
